--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Jeffrey Ware Portfolio Site Contact</title>
-    <link rel="stylesheet" type="text/css" href="./normalize.css">
-  	<link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+  	<link rel="stylesheet" type="text/css" href="styles.css">
   	<link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
   	<script
   	  src="https://code.jquery.com/jquery-3.2.1.min.js"
   	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   	  crossorigin="anonymous">
       </script>
-      <script src="./jquery.js"></script>
+      <script src="jquery.js"></script>
   </head>
   <body>
     <!-- popup menu -->
@@ -68,9 +68,9 @@
 
   <footer id='footer'>
     <div class="social_row">
-      <a href =""><div class="social-1"><img src="./photos/linkedin.png"></img></div></a>
-      <a href =""><div class="social-2"><img src="./photos/github.png"></img></div></a>
-      <a href =""><div class="social-3"><img src="./photos/facebook.png"></img></div></a>
+      <a href =""><div class="social-1"><img src="photos/linkedin.png"></img></div></a>
+      <a href =""><div class="social-2"><img src="photos/github.png"></img></div></a>
+      <a href =""><div class="social-3"><img src="photos/facebook.png"></img></div></a>
     </div>
     <span class="contact_row">
       <div class="phone_number">(323) - 803 - 0489</div>
