--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Jeffrey Ware's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="/normalize.css">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </div>
-    <video class="background-video" src="/photos/typing.mp4" autoplay type="video/mp4"></video>
+    <video class="background-video" src="photos/typing.mp4" autoplay type="video/mp4"></video>
     <div class='top-container'>
         <div id="menu-button">
             <span></span>
@@ -49,7 +49,7 @@
         <div class='photo-bio'>
             <span class='head-bio'>
 		   <div class='image'>
-		    <img src="/photos/backend_dev.jpg" class='bio-img'></img>
+		    <img src="photos/backend_dev.jpg" class='bio-img'></img>
 		   </div>
 		   <div class='title'>
 			<h2><strong>Jeffrey Ware</strong></h2>
@@ -73,7 +73,7 @@
 
             <div class="photo-rowgrid">
                 <div class="cell">
-                    <a href=""><img src="/photos/app_design.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='line_div'></div>
                     <div class='project_title'>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/art.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/art.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 2
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/backend_dev.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/backend_dev.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 3
@@ -106,7 +106,7 @@
             <!-- </div>
             <div class="photo-rowgrid"> -->
                 <div class="cell">
-                    <a href=""><img src="/photos/more_tech.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 4
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/app_design.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 5
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/more_tech.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 6
@@ -139,7 +139,7 @@
             <!-- </div>
             <div class="photo-rowgrid"> -->
                 <div class="cell">
-                    <a href=""><img src="/photos/app_design.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 7
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/more_tech.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 8
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="/photos/art.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/art.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 9
@@ -178,15 +178,15 @@
     <footer id='footer'>
         <div class="social_row">
             <a href="">
-                <div class="social-1"><img src="/photos/linkedin.png"></img>
+                <div class="social-1"><img src="photos/linkedin.png"></img>
                 </div>
             </a>
             <a href="">
-                <div class="social-2"><img src="/photos/github.png"></img>
+                <div class="social-2"><img src="photos/github.png"></img>
                 </div>
             </a>
             <a href="">
-                <div class="social-3"><img src="/photos/facebook.png"></img>
+                <div class="social-3"><img src="photos/facebook.png"></img>
                 </div>
             </a>
         </div>
