more contact php fixed

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
 <div class='form-div'>
 
-      <form  method="post" action="send_form_email.php"name="contact-form">
+      <form  method="post" action="send_form_email.php"name="contactform">
     <input id="ContactForm1_contact-form-name" name="name" placeholder="Name" size="30" type="text" value="" /><br />
     <input id="ContactForm1_contact-form-email" name="email" placeholder="Email" size="30" type="text" value="" /><br />
     <textarea cols="25" id="ContactForm1_contact-form-email-message" name="email-message" placeholder="Message" rows="5"></textarea><br />
