--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     <input id="ContactForm1_contact-form-name" name="name" placeholder="Name" size="30" type="text" value="" /><br />
     <input id="ContactForm1_contact-form-email" name="email" placeholder="Email" size="30" type="text" value="" /><br />
     <textarea cols="25" id="ContactForm1_contact-form-email-message" name="email-message" placeholder="Message" rows="5"></textarea><br />
-    <input id="ContactForm1_contact-form-submit" type="button" value="Send" /><br />
+    <input id="ContactForm1_contact-form-submit" type="submit" value="submit" /><br />
     <div style="max-width: 222px; text-align: center; width: 100%;">
     <br />
     <br />
