--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li>ABOUT ME</li>
+                <li><a>ABOUT ME</a></li>
                 <li>CONTACT</li>
                 <li>BLOG</li>
             </ul>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class='top-container2'>
-        <h1 class='site-title'>MR.WARE</h1>
+        <h1 class='site-title'><a href='#aboutme'>MR.WARE</a></h1>
     </div>
 
     <h1 class='more-arrow'><strong>^</strong></h1>
@@ -51,16 +51,20 @@
 		   <div class='image'>
 		    <img src="photos/backend_dev.jpg" class='bio-img'></img>
 		   </div>
+       <a id="aboutme" > </a>
 		   <div class='title'>
-			<h2><strong>Jeffrey Ware</strong></h2>
+
+			<h2 name='aboutme'><strong>Jeffrey Ware</strong></h2>
 			<h3><i>Software Engineer / Graphic Designer</i></h3>
 		   </div>
 	   </span>
 
             <div class='bio-p-container'>
-                <p>
+
+                <p name='aboutme'>
                     <span id='first-letter'>E</span>very chance I get, I water the plants, Lion! Don’t ever play yourself. It’s on you how you want to live your life. Everyone has a choice. I pick my choice, squeaky clean. The key is to drink coconut,
                     fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
+                  </p>
             </div>
         </div>
     </div>
