fixed text decoration

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li><a>ABOUT ME</a></li>
-                <li>CONTACT</li>
+                <li id ='aboutme'><a href='#'>ABOUT ME</a></li>
+                <li><a href='contact.html'>CONTACT</a></li>
                 <li>BLOG</li>
             </ul>
         </div>
@@ -185,7 +185,7 @@
                 <div class="social-1"><img src="photos/linkedin.png"></img>
                 </div>
             </a>
-            <a href="">
+            <a href="https://github.com/jnware7">
                 <div class="social-2"><img src="photos/github.png"></img>
                 </div>
             </a>
