--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li id ='aboutme'><a href='#'>ABOUT ME</a></li>
+                <li id ='aboutme'>ABOUT ME</li>
                 <li><a href='contact.html'>CONTACT</a></li>
                 <li>BLOG</li>
             </ul>
         </div>
         <div class='social-menu'>
-            <h1 class='site-title'>MR.WARE</h1>
+            <h1 class='site-title'><a href='aboutme'>MR.WARE</a></h1>
             <ul>
                 <li>LINKEDIN</li>
                 <li>GIT HUB</li>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class='top-container2'>
-        <h1 class='site-title'><a href='#aboutme'>MR.WARE</a></h1>
+        <h1 class='site-title'><a href='#aboutyou'>MR.WARE</a></h1>
     </div>
 
     <h1 class='more-arrow'><strong>^</strong></h1>
@@ -51,17 +51,17 @@
 		   <div class='image'>
 		    <img src="photos/backend_dev.jpg" class='bio-img'></img>
 		   </div>
-       <a id="aboutme" > </a>
+           <a name='aboutyou'></a>
 		   <div class='title'>
 
-			<h2 name='aboutme'><strong>Jeffrey Ware</strong></h2>
+			<h2 > <strong>Jeffrey Ware</strong></h2>
 			<h3><i>Software Engineer / Graphic Designer</i></h3>
 		   </div>
 	   </span>
 
             <div class='bio-p-container'>
 
-                <p name='aboutme'>
+                <p>
                     <span id='first-letter'>E</span>very chance I get, I water the plants, Lion! Don’t ever play yourself. It’s on you how you want to live your life. Everyone has a choice. I pick my choice, squeaky clean. The key is to drink coconut,
                     fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
                   </p>
