added social links

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class='social-menu'>
             <h1 class='site-title'><a href='aboutme'>MR.WARE</a></h1>
             <ul>
-                <li>LINKEDIN</li>
-                <li>GIT HUB</li>
-                <li>FACEBOOK</li>
+                <li><a href='https://www.linkedin.com/in/jeffrey-ware-a62068120/'>LINKEDIN</a></li>
+                <li><a href='https://github.com/jnware7'>GIT HUB</a></li>
+                <li><a href='https://m.facebook.com/jeffrey.ware.9'>FACEBOOK</a></li>
             </ul>
         </div>
     </div>
@@ -175,13 +175,13 @@
                 </div>
             </div>
         </div>
-
+<blockquote>“When you have exhausted all possibilities, remember this: you haven't.”</blockquote> <blockquote>Thomas Edison</blockquote>
     </div>
     </div>
 
     <footer id='footer'>
         <div class="social_row">
-            <a href="">
+            <a href="https://www.linkedin.com/in/jeffrey-ware-a62068120/">
                 <div class="social-1"><img src="photos/linkedin.png"></img>
                 </div>
             </a>
@@ -189,7 +189,7 @@
                 <div class="social-2"><img src="photos/github.png"></img>
                 </div>
             </a>
-            <a href="">
+            <a href="https://m.facebook.com/jeffrey.ware.9">
                 <div class="social-3"><img src="photos/facebook.png"></img>
                 </div>
             </a>
