--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jeffrey Ware Portfolio Site Contact</title>
+      <meta name=“viewport” content=“width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="normalize.css">
   	<link rel="stylesheet" type="text/css" href="styles.css">
   	<link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
@@ -45,7 +46,7 @@
 
 <div class='form-div'>
 
-      <form  method="post" aaction="mailto:someone@example.com"name="contactform">
+      <form  method="post" action="jnware7dev@gmail.com"name="contactform">
     <input id="ContactForm1_contact-form-name" name="name" placeholder="Name" size="30" type="text" value="" /><br />
     <input id="ContactForm1_contact-form-email" name="email" placeholder="Email" size="30" type="text" value="" /><br />
     <textarea cols="25" id="ContactForm1_contact-form-email-message" name="email-message" placeholder="Message" rows="5"></textarea><br />
