--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
 
-
+<h2 class='site-title'> PROJECTS</h2>
 
     <div class='gallery-center'>
         <div class="photoscontainer">
