--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
 <div class='form-div'>
 
-      <form  method="post" action="jnware7dev@gmail.com"name="contactform">
+      <form  method="post" action="mailto:jnware7dev@gmail.com"name="contactform">
     <input id="ContactForm1_contact-form-name" name="name" placeholder="Name" size="30" type="text" value="" /><br />
     <input id="ContactForm1_contact-form-email" name="email" placeholder="Email" size="30" type="text" value="" /><br />
     <textarea cols="25" id="ContactForm1_contact-form-email-message" name="email-message" placeholder="Message" rows="5"></textarea><br />
