--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Jeffrey Ware Portfolio Site Contact</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
       <meta name=“viewport” content=“width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="normalize.css">
   	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -12,18 +15,21 @@
   	  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   	  crossorigin="anonymous">
       </script>
+
+
       <script src="jquery.js"></script>
+
   </head>
   <body>
     <!-- popup menu -->
     <div class='pop-menu'>
-    	<div class='menu-options'>
-    		<ul>
-    			<li>ABOUT ME</li>
-    			<li>CONTACT</li>
-    			<li>BLOG</li>
-    		</ul>
-    	</div>
+        <div class='menu-options'>
+            <ul>
+                <li id ='aboutme'>ABOUT ME</li>
+                <li><a href='contact.html'>CONTACT</a></li>
+                <li>BLOG</li>
+            </ul>
+        </div>
     	<div class='social-menu'>
     	<h1 class='site-title'>MR.WARE</h1>
     		<ul>
