--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
             <div class="photo-rowgrid">
                 <div class="cell">
-                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    <a href="https://guesstheartist.herokuapp.com/scrape"><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='line_div'></div>
                     <div class='project_title'>
-                        NEW PROJECT
+                        WEB SCRAPER
                     </div>
                     <div class='project_description'>
-                        Don’t ever play yourself.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
+                      I created a web scraper that scrapes several collections of art form  the Broad museum in LA. This app shuffles the art every time the page is reloaded. On hover the image reveales its title. Guess the artist...
                     </div>
                 </div>
                 <div class="cell">
