added bookstore app

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="photos/art.jpg" class="responsive-image"></img>
+                    <a href="https://github.com/yaseenagag/bookstore-2.0"><img src="photos/art.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
-                        NEW PROJECT 2
+                        REACT BOOK STORE
                     </div>
                     <div class='project_description'>
-                        I pick my choice, squeaky clean.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
+                        A simple content management system that allows users to view, add, delete, and update books. Books entered in the system can be viewed in a list, as a single entry on its own page, or searched for using basic searches (by title, author, or genre).
                     </div>
                 </div>
                 <div class="cell">
