added insta project

--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="photos/backend_dev.jpg" class="responsive-image"></img>
+                    <a href="https://jnware7.github.io/elated-cockatoo/"><img src="photos/backend_dev.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
-                        NEW PROJECT 3
+                        REVERSE ENGINEER INSTAGRAM
                     </div>
                     <div class='project_description'>
-                        It’s on you how you want to live your life.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
+                      I took a screenshots of pages on a popular social media site (Twitter, Facebook, Pinterest), and reverse engineer the HTML and CSS from scratch.
+
+
                     </div>
                 </div>
             <!-- </div>
