added fixed contact link

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <div class='pop-menu'>
         <div class='menu-options'>
             <ul>
-                <li id ='aboutme'>ABOUT ME</li>
+                <li id ='aboutme'><a href='index.html'>ABOUT ME</a></li>
                 <li><a href='contact.html'>CONTACT</a></li>
                 <li>BLOG</li>
             </ul>
