--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
             <div class='bio-p-container'>
 
                 <p>
-                    <span id='first-letter'>E</span>very chance I get, I water the plants, Lion! Don’t ever play yourself. It’s on you how you want to live your life. Everyone has a choice. I pick my choice, squeaky clean. The key is to drink coconut,
-                    fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
-                  </p>
+                    <span id='first-letter'>I</span> would like to express my interest in Full Stack Development roles. As a professional with a diverse background, I know that my experiences will enable me to become a successful member of your team.
+               </p>
+               <p>
+                I am a strong candidate; I work well both independently and with a team, am responsible, and enjoy challenges.
+                </p>
             </div>
         </div>
     </div>
