--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
             <div class='bio-p-container'>
 
                 <p>
-                    <span id='first-letter'>I</span> would like to express my interest in Full Stack Development roles. As a professional with a diverse background, I know that my experiences will enable me to become a successful member of your team.
-               
-
-                I am a strong candidate; I work well both independently and with a team, am responsible, and enjoy challenges.
+                    <span id='first-letter'>I</span> would like to express my interest in Full Stack Development roles. As a professional with a diverse background, I know that my experiences will enable me to become a successful member of your team. I am a strong candidate; I work well both independently and with a team, am responsible, and enjoy challenges.
                 </p>
             </div>
         </div>
