added more animations

--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,21 @@
     	</div>
 </div>
       <div class='top-container3'>
+        <div class='top-container2'>
+            <h1 class='site-title'><a href='#aboutyou'>MR.WARE</a></h1>
+
+        </div>
+
+  <h1 class='more-arrow2'><strong>^</strong></h1>
+
+        <div class="p p-1"></div>
+   <div class="p p-2"></div>
+   <div class="p p-3"></div>
+
         <div id="menu-button">
-          <span></span>
-          <span></span>
-          <span></span>
+          <span class='outline'></span>
+          <span class='outline'></span>
+          <span class='outline'></span>
         </div>
       </div>
 <div class='header'>
