--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <video class="background-video" src="photos/typing.mp4" autoplay type="video/mp4"></video>
     <div class='top-container'>
         <div id="menu-button">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class='outline'></span>
+            <span class='outline'></span>
+            <span class='outline'></span>
         </div>
     </div>
     <div class='top-container2'>
