block quote styles

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
         </div>
-<blockquote>“When you have exhausted all possibilities, remember this: you haven't.”</blockquote> <blockquote>Thomas Edison</blockquote>
+<blockquote><h3>“When you have exhausted all possibilities, remember this: you haven't.”</h3></blockquote> <blockquote>Thomas Edison</blockquote>
     </div>
     </div>
 
