--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
         <div class="p p-1"></div>
    <div class="p p-2"></div>
    <div class="p p-3"></div>
-
+   <div class="p p-4"></div>
         <div id="menu-button">
           <span class='outline'></span>
           <span class='outline'></span>
