--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,6 @@
 
 
       <script src="jquery.js"></script>
-
   </head>
   <body>
     <!-- popup menu -->
@@ -30,7 +29,7 @@
             <ul>
                 <li id ='aboutme'><a href='index.html'>ABOUT ME</a></li>
                 <li><a href='contact.html'>CONTACT</a></li>
-                <li>BLOG</li>
+                <li><a href="https://drive.google.com/open?id=0BwJ303W2Cu58dGlvaHJnNzk1VDQ">RESUME</a></li>
             </ul>
         </div>
     	<div class='social-menu'>
@@ -59,6 +58,7 @@
           <span class='outline'></span>
           <span class='outline'></span>
         </div>
+
       </div>
 <div class='header'>
   <h1>Contact Me</h1>
