--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                        MUTABLE RESTFUL CRUD API
                     </div>
                     <div class='project_description'>
-                        The key is to drink coconut, fresh coconut, trust me.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever
-                        play yourself.
+                       I designed a Mutable, RESTful, CRUD API. This means that it has endpoints that you can interact with RESTfully via a front-end.
+
+
                     </div>
                 </div>
                 <div class="cell">
