--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Jeffrey Ware's Portfolio</title>
     <link rel="apple-touch-icon" href="photos/apple-icon-76x76.png" />
 <link rel="shortcut icon" href="photos/favicon.ico" />
-
-    <meta name=“viewport” content=“width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
