--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </ul>
         </div>
     </div>
-    <video class="background-video" src="photos/typing.mp4" autoplay type="video/mp4"></video>
+    <video class="background-video" src="photos/typing.mp4" autoplay type="video/mp4"
+	   <img src="https://social-tech-guide.s3.amazonaws.com/images/uploads/600x320/Guifi.net_1.jpg" title="Your browser does not support the <video> tag">
+	   ></video>
     <div class='top-container'>
         <div id="menu-button">
             <span class='outline'></span>
