--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class='bio-p-container'>
 
                 <p>
-                    <span id='first-letter'>I</span> would like to express my interest in Full Stack Development roles. As a professional with a diverse background, I know that my experiences will enable me to become a successful member of your team. I am a strong candidate; I work well both independently and with a team, am responsible, and enjoy challenges.
+                    <span id='first-letter'>W</span>ith a diverse background spanning the arts to health care, my passion for curating art has evolved to a passion for curating information architectures. With a natural eye for aesthetics, I aim to find new and innovative ways to merge design and development principles.
                 </p>
             </div>
         </div>
