--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                     <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
-                        NEW PROJECT 5
+                       MR. WARE BLOG
                     </div>
                     <div class='project_description'>
-                        Don’t ever play yourself.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
+                        I designed a Blog CMS with authentication.
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
+                    <a href="https://fast-brushlands-77589.herokuapp.com/Home"><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 6
