--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    <a href="https://fast-brushlands-77589.herokuapp.com/Home"><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                        MR. WARE BLOG
                     </div>
                     <div class='project_description'>
-                        I designed a Blog CMS with authentication.
+                        I designed a Blog CMS with authentication. MR. WARE is a blog desinged and maintained by Jeffrey Ware.
                     </div>
                 </div>
                 <div class="cell">
-                    <a href="https://fast-brushlands-77589.herokuapp.com/Home"><img src="photos/more_tech.jpg" class="responsive-image"></img>
+                    <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                         NEW PROJECT 6
