--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="cell">
-                    <a href="https://fast-brushlands-77589.herokuapp.com/Home"><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    <a href="https://fast-brushlands-77589.herokuapp.com"><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
                        MR. WARE BLOG
