--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                        MR. WARE BLOG
                     </div>
                     <div class='project_description'>
-                        I designed a Blog CMS with authentication. MR. WARE is a blog desinged and maintained by Jeffrey Ware.
+                        I designed a Blog CMS with authentication. MR. WARE is a blog designed and maintained by Jeffrey Ware.
                     </div>
                 </div>
                 <div class="cell">
