--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a href="https://jnware7.github.io/elated-cockatoo/"><img src="photos/backend_dev.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
-                        REVERSE ENGINEER INSTAGRAM
+                        REVERSE ENGINEER IG
                     </div>
                     <div class='project_description'>
                       I took a screenshots of pages on a popular social media site (Twitter, Facebook, Pinterest), and reverse engineer the HTML and CSS from scratch.
@@ -121,7 +121,7 @@
                     <a href="https://good--music.herokuapp.com"><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
-                       MUTABLE RESTFUL CRUD API
+                       MUTABLE REST CRUD API
                     </div>
                     <div class='project_description'>
                        I designed a Mutable, RESTful, CRUD API. This means that it has endpoints that you can interact with RESTfully via a front-end.
@@ -139,7 +139,7 @@
                         I designed a Blog CMS with authentication. MR. WARE is a blog designed and maintained by Jeffrey Ware.
                     </div>
                 </div>
-                <div class="cell">
+<!--                 <div class="cell">
                     <a href=""><img src="photos/more_tech.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
@@ -180,7 +180,7 @@
                     </div>
                     <div class='project_description'>
                         It’s on you how you want to live your life.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
