--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
             <!-- </div>
             <div class="photo-rowgrid"> -->
-                <div class="cell">
+<!--                 <div class="cell">
                     <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
                     </a>
                     <div class='project_title'>
@@ -181,7 +181,7 @@
                     <div class='project_description'>
                         It’s on you how you want to live your life.I pick my choice, squeaky clean. The key is to drink coconut, fresh coconut, trust me. Lion! You should never complain, complaining is a weak emotion, you got life, we breathing, we blessed. Don’t ever play yourself.
                     </div> -->
-                </div>
+                </div> -->
             </div>
         </div>
 <blockquote><h3>“When you have exhausted all possibilities, remember this: you haven't.”</h3></blockquote> <blockquote>Thomas Edison</blockquote>
