--- a/index.html
+++ b/index.html
@@ -139,7 +139,16 @@
                         I designed a Blog CMS with authentication. MR. WARE is a blog designed and maintained by Jeffrey Ware.
                     </div>
                 </div>
-
+		 <div class="cell">
+                    <a href=""><img src="photos/app_design.jpg" class="responsive-image"></img>
+                    </a>
+                    <div class='project_title'>
+                        NEW PROJECT 
+                    </div>
+                    <div class='project_description'>
+                       Coming Soon ...
+                    </div>
+                </div>
                 </div> 
             </div>
         </div>
