--- a/index.html
+++ b/index.html
@@ -157,25 +157,18 @@
     </div>
 
     <footer id='footer'>
-        <div class="social_row">
-            <a href="https://www.linkedin.com/in/jeffrey-ware-a62068120/">
-                <div class="social-1"><img src="photos/linkedin.png"></img>
-                </div>
-            </a>
-            <a href="https://github.com/jnware7">
-                <div class="social-2"><img src="photos/github.png"></img>
-                </div>
-            </a>
-            <a href="https://m.facebook.com/jeffrey.ware.9">
-                <div class="social-3"><img src="photos/facebook.png"></img>
-                </div>
-            </a>
-        </div>
-        <span class="contact_row">
-		<div class="phone_number">(323) - 803 - 0489</div>
-		<div class="email"> JNWARE@GMAIL.COM</div>
-	</span>
-    </footer>
+   <footer id='footer'>
+    <div class="social_row">
+      <a href =""><div class="social-1"><img src="photos/linkedin.png"></img></div></a>
+      <a href =""><div class="social-2"><img src="photos/github.png"></img></div></a>
+      <a href =""><div class="social-3"><img src="photos/facebook.png"></img></div></a>
+    </div>
+    <span class="contact_row">
+      <div class="phone_number">(323) - 803 - 0489</div>
+      <div class="email"> JNWARE@GMAIL.COM</div>
+    </span>
+  </footer>
+
 </body>
 
 </html>
